# hammurabi

./: .gitignore  .pylintrc  LICENSE  Makefile  README.md  hammurabi.py  hammurabi.sh  hammurabi.yaml  pip-requirements.txt  pyproject.toml  pytest.ini
hammurabi/: __init__.py  __main__.py  cli.py  exceptions.py
hammurabi/conf/: grader.conf.template
hammurabi/grader/: __init__.py  config.py  discovery.py  grader.conf  grader.py  model.py  reporting.py
hammurabi/grader/adapters/: __init__.py  base.py  c.py  cpp.py  csharp.py  java.py  javascript.py  python.py  ruby.py  windows_toolchain.py
hammurabi/grader/problems/: README.md
hammurabi/grader/reports/: README.md
hammurabi/grader/resources/: report.css
hammurabi/grader/resources/styles/: bootstrap.min.css  report.css
hammurabi/grader/resources/templates/: csharp-project.csproj.jinja  report-full.html  report-heatmap.html  report-matrix.html  report.html
hammurabi/grader/runners/: __init__.py  base.py  runner.py  subproc.py
hammurabi/grader/runners/memory/: __init__.py  base.py  fallback.py  linux.py  windows.py
hammurabi/grader/verifiers/: __init__.py  common.py  custom.py
hammurabi/utils/: __init__.py  confreader.py  dictview.py  exceptions.py  fileio.py  laws.py  product.py  terminal.py
hammurabi/web/hammurabi/: manage.py  settings.py  urls.py
hammurabi/web/hammurabi/hammurabi/: settings.py  wsgi.py
tests/: __init__.py  test_cli.py  test_config.py  test_confreader.py  test_dictview.py  test_fileio.py  test_grader.py  test_laws.py  test_product.py
tests/grader/: __init__.py  conftest.py  test_config.py  test_discovery.py  test_grader.py  test_grader_integration.py  test_reporting.py
tests/grader/fixtures/problems_for_language_tests/hworld/: problem.conf  problem.yaml
tests/grader/fixtures/problems_for_language_tests/hworld/answers/: 04.out  06.out  08.out  09.out
tests/grader/fixtures/problems_for_language_tests/hworld/solutions/cindy-c/: hworld.c
tests/grader/fixtures/problems_for_language_tests/hworld/solutions/john-js/: hworld.js
tests/grader/fixtures/problems_for_language_tests/hworld/solutions/peter-python/: hworld.py
tests/grader/fixtures/problems_for_language_tests/hworld/solutions/rose-ruby/: hworld.rb
tests/grader/fixtures/problems_for_verification_tests/hworld/solutions/chris-csharp-t/: Hworld.cs
tests/grader/fixtures/problems_for_verification_tests/hworld/solutions/jane-java-e/: HworldInputData.java
tests/grader/fixtures/problems_for_verification_tests/hworld/solutions/john-js-r/: hworld.js
tests/grader/runners/: __init__.py  test_subproc.py
tests/grader/runners/memory/: __init__.py  test_memory.py
tests/grader/verifiers/: __init__.py  test_common.py
tests/grader_language_tools_test_problems/hworld/answers/: 07.out  10.out
tests/grader_language_tools_test_problems/hworld/solutions/charlie-cpp/: hworld.cpp
tests/grader_language_tools_test_problems/hworld/solutions/chris-csharp/: Hworld.cs
tests/grader_language_tools_test_problems/hworld/solutions/jane-java/: Hworld.java
tests/grader_language_tools_test_problems/hworld/solutions/peter-python/: hworld.py
tests/grader_verification_test_problems/hworld/: problem.conf
tests/grader_verification_test_problems/hworld/solutions/charlie-cpp-w/: hworld.cpp
tests/grader_verification_test_problems/hworld/solutions/cindy-c/: hworld.c
tests/grader_verification_test_problems/hworld/solutions/jane-java-e/: Hworld.java  HworldOutputData.java
tests/grader_verification_test_problems/hworld/solutions/rose-ruby-f/: hworld.rb
tests/utils/: test_confreader.py  test_fileio.py  test_laws.py  test_product.py
