[project]
name = "hammurabi"
version = "0.4.0"
description = "An automated judge for algorithmic programming contests. Strict, but fair."
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.10"
dependencies = [
    "Jinja2>=3.0",
    "MarkupSafe>=2.0",
    "psutil>=5.8",
    "pydantic>=2.12.5",
    "requests>=2.25",
]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "ruff>=0.0.280",
    "ty>=0.0.7",
]

[project.scripts]
hammurabi = "hammurabi:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hammurabi"]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ty.environment]
python-version = "3.10"

[tool.ty.src]
include = ["hammurabi"]

[tool.ruff]
line-length = 100

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = [
    "B",        # flake8-bugbear
    "C4",       # flake8-comprehensions
    "E",        # pyflakes
    "F",        # pycodestyle
    "I",        # isort
    "INP",      # check missing __init__.py
    "N",        # pep8-naming
    "PL",       # pylint
    "PT",       # flake8-pytest-style
    "PYI",      # flake8-pyi
    "SIM",      # flake8-simplify
    "UP",       # pyupgrade
    "W",        # pycodestyle warnings
]

[tool.ruff.lint.isort]
force-single-line = true
single-line-exclusions = []

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "D",         # Allow tests without docstrings
    "INP001",    # Allow tests without __init__.py
    "PLR2004",   # Allow magic numbers in tests
]
